# r-KSODI-POC

./: .gitignore  README.md  n8n.json  pyproject.toml
.github/workflows/: documentation.yaml  integration-tests.yml
docs/: antora-playbook.yml  antora.yml
docs/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc
docs/supplemental-ui/css/: nav-hide.css
docs/supplemental-ui/partials/: head-styles.hbs  head.hbs  header-content.hbs
prompts/: LICENSE
src/react_agent/: __init__.py  context.py  graph.py  prompts.py  state.py  tools.py  utils.py
tests/integration_tests/: __init__.py  test_graph.py
tests/unit_tests/: __init__.py  test_configuration.py
